# spike-the-biker

./: .gitignore  README.md  datasets.py  pyproject.toml  train.py
conf/: config.yaml
conf/dataset/: default.yaml
conf/model/: default.yaml
data/: centerline.dxf  centerline_rounded.dxf  centerline_rounded_v2.dxf  floorplan.dxf
notebooks/: clean_data.py  efficientnet.ipynb  generate_test_label.ipynb  load_dxf.ipynb
scripts/: gen_traj.py  simulate_fisheye.py  train.py
scripts/conf/dataset/: default.yaml
scripts/conf/model/: default.yaml
spike_the_biker/: camera.py  datasets.py  dxf2shapely.py  floor.py  models.py  viz.py
trajectory_optimization/: datasets.py  models.py  viz.py
