[tool.poetry]
name = "spike-the-biker"
version = "0.1.0"
description = "Too fast for you"
authors = ["armandpl <adpl33@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.13.1"
wandb = "^0.15.11"
torchvision = "^0.14.1" 
hydra = "^2.5"
datasets = "^2.14.5"
tqdm = "^4.66.1"
timm = "^0.9.7"
matplotlib = "3.7.2"
scipy = "1.10.1"
joblib = "^1.3.2"
opencv-python = "^4.7.0.72"
shapely = "^2.0.1"
simple-pid = "^2.0.0"
pygame = "^2.5.2"
ezdxf = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
